<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.0.4</version>
        <relativePath/>
    </parent>
    <groupId>com.disposableemail</groupId>
    <artifactId>disposable-email-telegram-bot</artifactId>
    <version>0.0.1-SNAPSHOT</version>

    <name>Disposable Email :: Telegram bot</name>
    <description>Telegram bot for using the Disposable Email Project</description>

    <properties>
        <java.version>17</java.version>
        <spring-boot.version>3.0.4</spring-boot.version>
        <default.package>com.disposableemail.telegram</default.package>
        <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- utilities -->
        <org.mapstruct.version>1.5.3.Final</org.mapstruct.version>
        <projectlombok.version>1.18.26</projectlombok.version>
        <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
        <!-- telegram -->
        <telegrambots.version>6.5.0</telegrambots.version>
        <emoji-java.version>5.1.1</emoji-java.version>
        <!-- openapi -->
        <swagger-annotations.version>2.2.8</swagger-annotations.version>
        <jackson-databind-nullable.version>0.2.4</jackson-databind-nullable.version>
        <jakarta.annotation-api.version>2.1.1</jakarta.annotation-api.version>
        <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
        <jsr305.version>3.0.2</jsr305.version>
        <springfox-swagger2.version>2.9.2</springfox-swagger2.version>
        <!-- html parser -->
        <jsoup.version>1.15.4</jsoup.version>
        <!-- plugin versions -->
        <openapi-generator-maven-plugin.version>6.0.1</openapi-generator-maven-plugin.version>
        <liquibase-hibernate6.version>4.22.0</liquibase-hibernate6.version>
        <validation-api.version>3.0.2</validation-api.version>
        <liquibase-maven-plugin.version>4.22.0</liquibase-maven-plugin.version>
    </properties>
    <dependencies>

        <!-- autoconfiguration -->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webflux</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>

        <!-- security -->

        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-crypto</artifactId>
        </dependency>

        <!-- telegram -->

        <dependency>
            <groupId>org.telegram</groupId>
            <artifactId>telegrambots-spring-boot-starter</artifactId>
            <version>${telegrambots.version}</version>
        </dependency>
        <dependency>
            <groupId>com.vdurmont</groupId>
            <artifactId>emoji-java</artifactId>
            <version>${emoji-java.version}</version>
        </dependency>

        <!-- data -->

        <dependency>
            <groupId>org.liquibase</groupId>
            <artifactId>liquibase-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <scope>runtime</scope>
        </dependency>

        <!-- cache -->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-cache</artifactId>
        </dependency>
        <dependency>
            <groupId>com.github.ben-manes.caffeine</groupId>
            <artifactId>caffeine</artifactId>
        </dependency>

        <!-- utilities -->

        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
            <version>${org.mapstruct.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>

        <!-- openapi -->

        <dependency>
            <groupId>io.swagger.core.v3</groupId>
            <artifactId>swagger-annotations</artifactId>
            <version>${swagger-annotations.version}</version>
        </dependency>
        <dependency>
            <groupId>javax.annotation</groupId>
            <artifactId>javax.annotation-api</artifactId>
            <version>${javax.annotation-api.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openapitools</groupId>
            <artifactId>jackson-databind-nullable</artifactId>
            <version>${jackson-databind-nullable.version}</version>
        </dependency>
        <dependency>
            <groupId>jakarta.annotation</groupId>
            <artifactId>jakarta.annotation-api</artifactId>
            <version>${jakarta.annotation-api.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>jsr305</artifactId>
            <version>${jsr305.version}</version>
        </dependency>
        <dependency>
            <groupId>io.springfox</groupId>
            <artifactId>springfox-swagger2</artifactId>
            <version>${springfox-swagger2.version}</version>
        </dependency>
        <dependency>
            <groupId>io.springfox</groupId>
            <artifactId>springfox-swagger-ui</artifactId>
            <version>2.9.2</version>
        </dependency>

        <!-- html parser -->

        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>${jsoup.version}</version>
        </dependency>

        <!-- testing -->

        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.liquibase</groupId>
                <artifactId>liquibase-maven-plugin</artifactId>
                <version>${liquibase-maven-plugin.version}</version>
                <configuration>
                    <systemProperties>
                        <user.name>Disposable_email_Admin</user.name>
                    </systemProperties>
                    <propertyFile>src/main/resources/liquibase.properties</propertyFile>
                    <changeLogFile>${project.basedir}/src/main/resources/db/db.changelog-master.xml</changeLogFile>
                    <outputChangeLogFile>
                        ${project.basedir}/src/main/resources/db/changelog/${maven.build.timestamp}_changelog.xml
                    </outputChangeLogFile>
                    <diffChangeLogFile>
                        ${project.basedir}/src/main/resources/db/changelog/${maven.build.timestamp}_changelog.xml
                    </diffChangeLogFile>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.postgresql</groupId>
                        <artifactId>postgresql</artifactId>
                        <version>${postgresql.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>org.liquibase.ext</groupId>
                        <artifactId>liquibase-hibernate6</artifactId>
                        <version>${liquibase-hibernate6.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>org.springframework.boot</groupId>
                        <artifactId>spring-boot-starter-data-jpa</artifactId>
                        <version>${spring-boot.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>jakarta.validation</groupId>
                        <artifactId>jakarta.validation-api</artifactId>
                        <version>${validation-api.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <executable>true</executable>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${org.mapstruct.version}</version>
                        </path>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${projectlombok.version}</version>
                        </path>
                        <dependency>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok-mapstruct-binding</artifactId>
                            <version>${lombok-mapstruct-binding.version}</version>
                        </dependency>
                    </annotationProcessorPaths>
                    <source>18</source>
                    <target>18</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openapitools</groupId>
                <artifactId>openapi-generator-maven-plugin</artifactId>
                <version>${openapi-generator-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <id>generate-code</id>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <typeMappings>
                                <typeMapping>OffsetDateTime=java.time.LocalDateTime</typeMapping>
                            </typeMappings>
                            <generatorName>java</generatorName>
                            <library>webclient</library>
                            <inputSpec>
                                ../openapi-spec/external-api.yaml
                            </inputSpec>
                            <strictSpec>true</strictSpec>
                            <skipIfSpecIsUnchanged>true</skipIfSpecIsUnchanged>
                            <generateApis>true</generateApis>
                            <generateApiDocumentation>false</generateApiDocumentation>
                            <generateApiTests>false</generateApiTests>
                            <generateModels>true</generateModels>
                            <generateModelDocumentation>false</generateModelDocumentation>
                            <generateModelTests>false</generateModelTests>
                            <skipValidateSpec>true</skipValidateSpec>
                            <generateSupportingFiles>true</generateSupportingFiles>
                            <output>${project.build.directory}/generated-sources</output>
                            <modelPackage>${default.package}.client.disposableemail.webclient.model</modelPackage>
                            <apiPackage>${default.package}.client.disposableemail.webclient.api</apiPackage>
                            <configOptions>
                                <oas3>true</oas3>
                                <useSpringBoot3>true</useSpringBoot3>
                                <useSpringController>true</useSpringController>
                                <useSpringfox>false</useSpringfox>
                                <sourceFolder>main/java</sourceFolder>
                                <dateLibrary>java8</dateLibrary>
                                <useTags>true</useTags>
                                <useJakartaEe>true</useJakartaEe>
                                <java8>true</java8>
                                <openApiNullable>false</openApiNullable>
                                <useBeanValidation>false</useBeanValidation>
                                <performBeanValidation>false</performBeanValidation>
                                <interfaceOnly>false</interfaceOnly>
                                <useOptional>false</useOptional>
                            </configOptions>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
